<resources>
    <string name="app_name">Lab3</string>
    <string name="add_student">Додати студента</string>
    <string name="student_options">Налаштування студента</string>
    <string name="edit_student">Редагувати студента</string>
    <string name="delete_student">Видалити студента</string>
    <string name="first_name">Ім\'я</string>
    <string name="last_name">Прізвище</string>
    <string name="date_of_birth_yyyy_mm_dd">Дата народження (РРРР-ММ-ДД)</string>
    <string name="school">Школа</string>
    <string name="class_year">Клас</string>
    <string name="class_letter">Літера класу</string>
    <string name="select_subjects">Обрати предмети</string>
    <string name="save">Зберегти</string>
    <string name="data_saved_successfully">Дані збережено</string>
</resources>